Support for disabling ComboBox items

--- a/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_combobox.scss
@@ -388,6 +388,10 @@
     @include valo-selection-item-selected-style;
   }
 
+  .gwt-MenuItem-disabled {
+    opacity: 0.4;
+  }
+
   [class$="status"] {
     position: absolute;
     right: $v-border-radius;
