--- a/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
+++ b/themes/src/main/themes/VAADIN/themes/valo/components/_grid.scss
@@ -423,7 +423,7 @@ $v-grid-details-border-bottom-stripe: 1px solid darken($v-grid-row-background-co
 
     > div {
       display: inline-block;
-      @include box-sizing(border-box);
+      box-sizing: border-box;
       vertical-align: middle;
       background: $v-grid-editor-background-color;
 
