Refer to Vaadin Framework in release notes

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -36,29 +36,29 @@
         <h2 id="tableofcontents">Release Notes for Vaadin Framework
             @version@</h2>
         <ul>
-            <li><a href="#overview">Overview of Vaadin
-                    @version@ Release</a></li>
-            <li><a href="#changelog">Change Log for Vaadin
+            <li><a href="#overview">Overview of Vaadin Framework
+                    @version@ release</a></li>
+            <li><a href="#changelog">Change Log for Vaadin Framework
                     @version@</a></li>
-            <li><a href="#enhancements">Enhancements in Vaadin
+            <li><a href="#enhancements">Enhancements in Vaadin Framework
                     @version-minor@</a></li>
             <li><a href="#incompatible">Incompatible or Behavior-altering Changes in
                     @version-minor@</a></li>
             <li><a href="#knownissues">Known Issues and Limitations</a></li>
-            <li><a href="#vaadin">Vaadin Installation</a></li>
+            <li><a href="#framework">Vaadin Framework Installation</a></li>
             <li><a href="#package">Package Contents</a></li>
             <li><a href="#migrating">Migrating from Vaadin 7.7</a></li>
-            <li><a href="#dependencies">Vaadin @version@
+            <li><a href="#dependencies">Vaadin Framework @version@
                     dependencies</a></li>
             <li><a href="#supportedversions">Supported
                     Technologies</a></li>
-            <li><a href="#vaadinontheweb">Vaadin on the Web</a></li>
+            <li><a href="#vaadinontheweb">Vaadin Framework on the Web</a></li>
         </ul>
 
-        <h2 id="overview">Overview of Vaadin @version@ Release</h2>
+        <h2 id="overview">Overview of Vaadin Framework @version@ Release</h2>
 
         <p>
-            Vaadin @version@ is a
+            Vaadin Framework @version@ is a
 <!--            feature release that includes -->
             pre-release for evaluating
             a number of new features and bug fixes, as listed in the <a
@@ -67,7 +67,7 @@
         </p>
 
         <!-- ================================================================ -->
-        <h3 id="changelog">Change Log for Vaadin @version@</h3>
+        <h3 id="changelog">Change Log for Vaadin Framework @version@</h3>
 	<!-- @release-notes-changelog@ -->
         <p>
             You can find the full list of all changes <a
@@ -75,16 +75,16 @@
                 GitHub</a>.
         </p>
 
-        <h2 id="enhancements">Enhancements in Vaadin @version-minor@</h2>
+        <h2 id="enhancements">Enhancements in Vaadin Framework @version-minor@</h2>
 
-        <p>Vaadin @version-minor@ includes many major and minor
+        <p>Vaadin Framework @version-minor@ includes many major and minor
             enhancements. Below is a list of the most notable changes:</p>
 
         <ul>
             <li>New, simpler data binding API</li>
-            <li>Vaadin is now based on Java 8</li>
-            <li>Vaadin is using GWT 2.8, allowing client side code to use Java 8</li>
-            <li>Other Vaadin dependencies including Atmosphere have been upgraded</li>
+            <li>Vaadin Framework is now based on Java 8</li>
+            <li>Vaadin Framework is using GWT 2.8, allowing client side code to use Java 8</li>
+            <li>Other Framework dependencies including Atmosphere have been upgraded</li>
         </ul>
 
         <p>
@@ -94,25 +94,25 @@
             new API, and the old data binding API and components have been moved to separate
             compatibility packages for ease of migration.
             For more details, see <a href="#incompatible">the list of incompatible changes</a> and <a href="#migrating">how to migrate
-            to Vaadin 8</a>.
+            to Vaadin Framework 8</a>.
         </p>
 
         <p>
-            For enhancements introduced in Vaadin 7.7, see the <a
+            For enhancements introduced in Vaadin Framework 7.7, see the <a
                 href="http://vaadin.com/download/release/7.7/7.7.0/release-notes.html">Release
-                Notes for Vaadin 7.7.0</a>.
+                Notes for Vaadin Framework 7.7.0</a>.
         </p>
 
         <h2 id="incompatible">Incompatible or Behavior-altering Changes in @version@</h2>
         
         <ul><h4>Compatibility and requirements</h4>
-            <li>Vaadin now requires Java 8 or later and Servlet 3.0 or later</li>
+            <li>Vaadin Framework now requires Java 8 or later and Servlet 3.0 or later</li>
             <li>Support for older browsers (including Microsoft IE 8-10) and Windows Phone has been dropped</li>
             <li><a href="#supportedservers">Supported servers</a></li>
         </ul>
         <ul><h4>New Data Binding API related changes</h4>
             <li>Components using <tt>Property</tt>, <tt>Item</tt> or <tt>Container</tt> API have been reimplemented for the new API, except <tt>Tree</tt>, <tt>Table</tt>, <tt>TreeTable</tt> and <tt>Calendar</tt></li>
-            <li>Vaadin 7 versions of the components available in the v7 compatibility package for easier migration, <a href="#legacycomponents">see list of legacy components</a></li>
+            <li>Framework 7 versions of the components available in the v7 compatibility package for easier migration, <a href="#legacycomponents">see list of legacy components</a></li>
             <li><tt>Binder</tt> is the replacement of <tt>FieldGroup</tt>, and similarly <tt>BeanBinder</tt> is the replacement of <tt>BeanFieldGroup</tt></li>
             <li>Converters and Validators have been moved from Components to <tt>Binder</tt></li>
             <li><tt>DataProvider</tt> is the replacement of <tt>Container</tt></li>
@@ -251,19 +251,19 @@
         </ul>
 
 
-        <h2 id="vaadin">Vaadin Installation</h2>
+        <h2 id="vaadin">Vaadin Framework Installation</h2>
 
         <p>
-            <b>Vaadin</b> is a Java framework for building modern web
+            <b>Vaadin Framework</b> is a Java framework for building modern web
             applications that look great, perform well and make you and
-            your users happy. <b>Vaadin</b> is available under the
+            your users happy. <b>The Framework</b> is available under the
             Apache License, Version 2.0 (see the
             <tt>license.html</tt>
-            in the Vaadin ZIP package).
+            in the Vaadin Framework ZIP package).
         </p>
 
         <p>
-            The easiest ways to install <b>Vaadin</b> are:
+            The easiest ways to install <b>Vaadin Framework</b> are:
         </p>
 
         <ul>
@@ -274,9 +274,9 @@
 
             <li><strong>IDE Plugins.</strong>If using Eclipse, use the
                 <a href="http://vaadin.com/eclipse">Vaadin Plugin for Eclipse</a>, which automatically
-                downloads the Vaadin libraries. For NetBeans 8.0 and 7.4, use the
+                downloads the Framework libraries. For NetBeans 8.0 and 7.4, use the
                 <a href="http://plugins.netbeans.org/plugin/50531/vaadin-plug-in-for-netbeans">official Vaadin plugin</a>
-                that provides Maven based wizards and code completion support for Vaadin development.
+                that provides Maven based wizards and code completion support for Vaadin Framework based development.
             </li>
         </ul>
 
@@ -338,18 +338,18 @@
             components.)
         </p>
 
-        <h2 id="migrating">Migrating from Vaadin 7.7</h2>
+        <h2 id="migrating">Migrating from Vaadin Framework 7.7</h2>
 
         <p>
-            Most Vaadin 7 applications need some changes when migrating
-            to Vaadin 8. In addition to updating dependencies, all references to
-            Vaadin 7 style data binding and components using it need to be
-            updated either to use new Vaadin 8 style data binding or to use the
+            Most Vaadin Framework 7 applications need some changes when migrating
+            to Vaadin Framework 8. In addition to updating dependencies, all references to
+            Framework 7 style data binding and components using it need to be
+            updated either to use new Framework 8 style data binding or to use the
             compatibility versions in separate packages.
         </p>
 
         <p>
-            Vaadin 7 compatible versions of the old data binding API and
+            Vaadin Framework 7 compatible versions of the old data binding API and
             components (with the exception of Form) are available in the package
             com.vaadin.v7 in modules vaadin-compatibility-server,
             vaadin-compatibility-shared etc. that can be used instead of
@@ -368,23 +368,23 @@
         </p>
 
         <p>
-            Some Vaadin 7 add-ons do not work in Vaadin 8 - please check the add-ons in <a
+            Some Vaadin Framework 7 add-ons do not work in version 8 - please check the add-ons in <a
                 href="http://vaadin.com/directory/">Vaadin Directory</a>
-            for Vaadin 8 support.
+            for Framework version 8 support.
         </p>
 
         <h3 id="upgrading">Common Upgrade Steps</h3>
 
-        <p>Always when upgrading from an earlier Vaadin version, you
+        <p>Always when upgrading from an earlier Vaadin Framework version, you
             must:</p>
 
         <ul>
-            <li>Recompile your classes using the new Vaadin
+            <li>Recompile your classes using the new Framework
                 version. Binary compatibility is only guaranteed for
-                maintenance releases of Vaadin.</li>
+                maintenance releases of Framework.</li>
 
             <li>Unless using the precompiled widget set, recompile
-                your widget set using the new Vaadin version.</li>
+                your widget set using the new Framework version.</li>
         </ul>
 
         <p>Remember also to refresh the project in your IDE to
@@ -403,26 +403,26 @@
         </p>
 
         <p>
-            <b>Maven</b> users should update the Vaadin dependency
+            <b>Maven</b> users should update the Vaadin Framework dependency
             version in the
             <tt>pom.xml</tt>
             .
         </p>
 
-        <h2 id="dependencies">Vaadin @version@ Dependencies</h2>
+        <h2 id="dependencies">Vaadin Framework @version@ Dependencies</h2>
 
         <p>When using Maven, Ivy, Gradle, or other dependency
-            management system, all Vaadin dependencies are downloaded
+            management system, all Framework dependencies are downloaded
             automatically. This is also the case when using the Vaadin
             Plugin for Eclipse.</p>
 
         <p>
-            The Vaadin ZIP installation package includes the
+            The Vaadin Framework ZIP installation package includes the
             dependencies in the
             <tt>lib</tt>
             subfolder. These need to be copied to the
             <tt>WEB-INF/lib</tt>
-            folder of the web application that uses Vaadin.
+            folder of the web application that uses Vaadin Framework.
         </p>
 
         <p>
@@ -445,7 +445,7 @@
         <h2 id="supportedversions">Supported Technologies</h2>
 
         <p>
-            Vaadin 8 is compatible with <b>Java 8</b> and newer. Vaadin
+            Vaadin Framework 8 is compatible with <b>Java 8</b> and newer. Vaadin Framework
             8 is especially supported on the following <b>operating
                 systems</b>:
         </p>
@@ -457,7 +457,7 @@
         </ul>
 
         <p>
-            Vaadin 8 requires <b>Java Servlet API 3.0</b> but also
+            Vaadin Framework 8 requires <b>Java Servlet API 3.0</b> but also
             supports later versions and should work with any Java
             application server that conforms to the standard. The
             following <b>application servers</b> are supported:
@@ -475,7 +475,7 @@
         </ul>
 
         <p>
-            Vaadin 8 supports the JSR-286 Portlet specification and all
+            Vaadin Framework 8 supports the JSR-286 Portlet specification and all
             portals that implement the specification should work provided
             they support Java 8 and Servlet 3.0. The following <b>portals</b>
             are supported:
@@ -486,11 +486,11 @@
         </ul>
 
         <p>
-            Vaadin also supports <b>Google App Engine</b>.
+            Vaadin Framework also supports <b>Google App Engine</b>.
         </p>
 
         <p>
-            Vaadin @version@ supports the following <b>desktop browsers</b>:
+            Vaadin Framework @version@ supports the following <b>desktop browsers</b>:
         </p>
 
         <ul>
@@ -502,7 +502,7 @@
         </ul>
 
         <p>
-            Additionally, Vaadin supports the built-in browsers in the
+            Additionally, Vaadin Framework supports the built-in browsers in the
             following <b>mobile operating systems</b>:
         </p>
 
@@ -518,27 +518,27 @@
                     developer portal containing everything you need to
                     know about Vaadin</a></li>
             <li><a href="http://vaadin.com/demo">vaadin.com/demo
-                    - A collection of demos for Vaadin</a></li>
+                    - A collection of demos for Vaadin Framework</a></li>
             <li><a href="http://vaadin.com/learn">vaadin.com/learn
-                    - Getting started with Vaadin</a></li>
+                    - Getting started with Vaadin Framework</a></li>
             <li><a href="http://vaadin.com/forum">vaadin.com/forum
-                    - Forums for Vaadin related discussions</a></li>
+                    - Forums for Vaadin Framework related discussions</a></li>
             <li><a href="http://vaadin.com/book">vaadin.com/book
                     - Book of Vaadin - everything you need to know about
-                    Vaadin</a></li>
+                    Vaadin Framework</a></li>
             <li><a href="http://vaadin.com/api">vaadin.com/api
                     - Online javadocs</a></li>
             <li><a href="http://vaadin.com/directory">vaadin.com/directory
-                    - Add-ons for Vaadin</a></li>
+                    - Add-ons for Vaadin Framework</a></li>
 
             <li><a href="http://vaadin.com/pro-tools">vaadin.com/pro-tools
-                    - Commercial tools for Vaadin development</a></li>
+                    - Commercial tools for Vaadin Framework</a></li>
             <li><a href="http://vaadin.com/support">vaadin.com/support
-                    - Commercial support for Vaadin development </a></li>
+                    - Commercial support for Vaadin Framework</a></li>
             <li><a href="http://vaadin.com/services">vaadin.com/services
-                    - Expert services for Vaadin</a></li>
+                    - Expert services for Vaadin Framework users</a></li>
             <li><a href="http://vaadin.com/company">vaadin.com/company
-                    - Information about the company behind Vaadin</a></li>
+                    - Information about the company behind Vaadin Framework</a></li>
             <li><a href="https://vaadin.com/contribute">vaadin.com/contribute - Contribution quide</a></li>
             <li><a href="https://github.com/vaadin/framework/issues">github.com/vaadin/framework - Github repository</a></li>
         </ul>
