Beta notes and special message to add-on developers

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -64,6 +64,12 @@
             a number of new features and bug fixes, as listed in the <a
                 href="#enhancements">list of enhancements</a> and <a
                 href="#changelog">change log</a> below.
+		With this beta release we will change things based on your feedback 
+		and that may lead to breaking changes.
+	</p>
+	<p>	Special note for add-on developers: please test your add-on against 
+		Framework 8.0 and update your add-on as needed.
+		
         </p>
 
         <!-- ================================================================ -->
