Remove Google App Engine from documentation (#8038)
* Remove Google App Engine from documentation

Mention removal in release notes.

Part of #8033

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -114,6 +114,7 @@
         <ul><h4>Compatibility and requirements</h4>
             <li>Vaadin Framework now requires Java 8 or later and Servlet 3.0 or later</li>
             <li>Support for older browsers (including Microsoft IE 8-10) and Windows Phone has been dropped</li>
+            <li>Support for Google App Engine has been dropped</li>
             <li><a href="#supportedservers">Supported servers</a></li>
         </ul>
         <ul><h4>New Data Binding API related changes</h4>
