Support loading of HTML imports using @HtmlImport
Note that not all browsers yet support HTML imports. If a polyfill
is needed to load HTML imports, it must be loaded before HTML Imports
can be loaded. There is no automatic loading of any polyfills.

--- a/all/src/main/templates/release-notes.html
+++ b/all/src/main/templates/release-notes.html
@@ -91,6 +91,7 @@
             <li>Vaadin Framework is now based on Java 8</li>
             <li>Vaadin Framework is using GWT 2.8, allowing client side code to use Java 8</li>
             <li>Other Framework dependencies including Atmosphere have been upgraded</li>
+            <li>Easier to integrate web components using HTML imports (<tt>@HtmlImport</tt>) and custom tag name support for <tt>AbstractJavaScriptComponent</tt></li>
         </ul>
 
         <p>
